1999-11-11  David Lazaro Saz  <khelekir@encomix.es>

	* configure.in (objc_thread_lib): Added support for FreeBSD native
	POSIX threads (from libc_r).  Made this the first option to test as
	this is the best working one.
	* configure: New build to support the above mentioned.

Wed Nov 10 12:05:16 1999  Lyndon Tremblay <ltremblay@mezzanine.xnot.com>

	* library.make: Added some uninstalling commands, specifically,
	when the 'LIBRARY_NAME.so' file links to 'LIBRARY_NAME_d.so',
	remove that stale link. (using if [ ! -e <link ], maybe that's wrong,
	but it works)
	* rootinstall.sh: changed rooot to root.
	* tool.make: Also added install commands here, to remove the
	'GNUSTEP_INSTALLATION_DIR/Tools/<toolname>' script as well as the
	real tool binary.
	
Mon Nov 08 11:41:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* names.make: Fix to run config scripts in /tmp in order to avoid
	directory permission problems in current directory.

Sun Nov 07 14:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* common.make: define GSWARN unless 'warn=no' is on command line.

Fri Nov 05 11:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* application.make: Added comment about including info.plist stuff.
	* bundle.make: Added support for inclusion of info.plist stuff.

1999-10-03  Lyndon Tremblay  <ltremblay@mezzanine.xnot.com>

	* GNUstep.sh.in: Added CLASSPATH settings.
	* GNUstep.csh.in: Likewise, untested.
	
1999-10-02  Lyndon Tremblay  <ltremblay@mezzanine.xnot.com>

	* target.make: Links LIBNAME.so to LIBNAME_d.so, so you can build
	applications without debug, but using the GNUstep debug libraries.
	Needs to be added for other systems, I don't want to risk it, I don't
	have any besides Linux ELF.
	* rules.make: Added Java classpath, and working Java dependency per
	Java package name; (org.gnu.gnustep.HiClass ->
		GNUSTEP_SYSTEM_ROOT/Java/org/gnu/gnustep/HiClass.class, etc)
	
1999-10-01  Lyndon Tremblay  <ltremblay@mezzanine.xnot.com>