@@ -37,9 +37,9 @@ GNUSTEP_USER_ROOT=~/GNUstep
 export GNUSTEP_LOCAL_ROOT GNUSTEP_NETWORK_ROOT GNUSTEP_USER_ROOT
 
 if [ -z "$GNUSTEP_BUILD_ROOT" ]; then
-      GNUSTEP_MAKEFILES=$GNUSTEP_SYSTEM_ROOT/Makefiles
+  GNUSTEP_MAKEFILES=$GNUSTEP_SYSTEM_ROOT/Makefiles
 else
-      GNUSTEP_MAKEFILES=$GNUSTEP_BUILD_ROOT/Makefiles
+  GNUSTEP_MAKEFILES=$GNUSTEP_BUILD_ROOT/Makefiles
 fi
 export GNUSTEP_MAKEFILES
 
@@ -120,9 +120,9 @@ fi # [ -z "$GNUSTEP_BUILD_ROOT" ]
 #
 
 if [ -z "$CLASSPATH" ]; then
-	MY_CLASSPATH=.
+  MY_CLASSPATH=.
 else
-	MY_CLASSPATH=$CLASSPATH:.
+  MY_CLASSPATH=$CLASSPATH:.
 fi # [ -z "$CLASSPATH" ]
 
 export CLASSPATH=$GNUSTEP_SYSTEM_ROOT/Java/:$GNUSTEP_USER_ROOT/Java/:$GNUSTEP_LOCAL_ROOT/Java/:$GNUSTEP_NETWORK_ROOT/Java/:$MY_CLASSPATH
